--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>KnowMeHari – Personal Website</title>
   <meta name="description" content="Official personal website of Harikrishnan (KnowMeHari). Portfolio, projects, and contact details.">
+  <meta name="google-site-verification" content="_oba3Otzetiy3VN0IZssw1QZwBpwDmj6_Gb62Zyo4Ls" />
   <meta name="robots" content="index, follow">
   <style>
     body {
